--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prod": "vite --mode production",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:github": "vite build --mode github",
     "lint": "eslint .",
     "preview": "vite preview"
   },
